Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -284,10 +284,10 @@
     <section id="quiz-link">
         <h2>Take part in the Quiz!</h2>
         <p>Click on the link below to take the gaming quiz!</p>
-        <a href="https://example.com/quiz" target="_blank">Click here for the Quiz</a>
+        <a href="https://create.kahoot.it/share/gaming-legends-quiz/3e8ac474-7c57-4288-ab4b-7a49c45b4070" target="_blank">Click here for the Quiz</a>
         <br><br>
         <p>Or scan the QR Code:</p>
-        <img src="https://api.qrserver.com/v1/create-qr-code/?data=https://example.com/quiz&size=150x150" alt="QR Code para Quiz">
+        <img src="https://api.qrserver.com/v1/create-qr-code/?data=https://https://create.kahoot.it/share/gaming-legends-quiz/3e8ac474-7c57-4288-ab4b-7a49c45b4070/quiz&size=150x150" alt="QR Code para Quiz">
     </section>
 
     <footer>
